Fix invisible cursor bug!!!

--- a/app/assets/stylesheets/note/note.scss
+++ b/app/assets/stylesheets/note/note.scss
@@ -35,7 +35,8 @@
   vertical-align: middle;
 }
 
-.null-note-message p, span {
+.null-note-message p,
+.null-note-message span {
   display: inline-block;
   vertical-align: middle;
   font-size: 24px;
